@@ -1,4 +1,9 @@
-$Id: ChangeLog,v 1.49 2004/04/12 13:37:08 h_oudejans Exp $
+$Id: ChangeLog,v 1.50 2004/04/12 19:28:07 h_oudejans Exp $
+
+2004-04-15 Herman Oudejans <hn.oudejans@quicknet.nl>
+	* fixed gtk segfault when catapult closes and openmsx still runs
+	* fixed gtk segfault when mouse is being hold while selecting the
+	   same joystickdevice in both joystick ports
 
 2004-04-12 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* fixed gtk segfault when starting openmsx.
